--- a/app/assets/stylesheets/components/_card-category.scss
+++ b/app/assets/stylesheets/components/_card-category.scss
@@ -1,7 +1,11 @@
+a {
+  text-decoration: none;
+
+}
 .card-category {
   background-size: cover;
   background-position: center;
-  height: 400px;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,13 +14,15 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  transition: 0.3s transform ease-in-out;
 
-  h1 {
-    font-size: 3.25rem;
 
+  &:hover {
+    transform: scale(1.03);
+    transition: transform 0.3s ease-in-out;
   }
 
-  .counter {
-    font-size: 0.8rem;
+  h1 {
+    font-size: 2.25rem;
   }
 }
