--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,15 @@
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://picsum.photos/seed/picsum/500/300)">
-  <h1><%= @list.name %></h1>
-  <div class="counter"><%= @list.movies.count %> movie<%= @list.movies.count > 1 ? "s" : "" %></div>
+
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://picsum.photos/seed/picsum/500/300);">
+  <div class="container">
+    <h1><%= @list.name %></h1>
+    <div class="counter"><%= @list.movies.count %> movie<%= @list.movies.count != 1 ? "s" : "" %></div>
+  </div>
 </div>
 
 <div class="container">
-  <%= link_to "Add a movie", new_list_bookmark_path(@list), class: "btn btn-success new-movie" %>
+  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
+    Add a movie
+  </button>
   <div class="bookmarks">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="card-trip">
@@ -26,5 +31,23 @@
   </div>
 </div>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add a movie to your list</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= render 'bookmarks/form', bookmark: @new_bookmark, list: @list %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <%= link_to "back", lists_path %>
-<%= link_to "add a bookmark", new_list_bookmark_path(@list) %>
