--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -18,11 +18,14 @@
   right: 0.7em;
 }
 
+.list {
+  text-decoration: none !important;
+}
 
 
 .bookmarks {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 0.5fr));
   min-height: 70vh;
   align-items: flex-start;
   margin: 2em auto;
