--- a/app/assets/stylesheets/components/_cards-grid.scss
+++ b/app/assets/stylesheets/components/_cards-grid.scss
@@ -2,4 +2,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1em;
+
+  .btn {
+    color: red;
+    // position: absolute;
+  }
 }
