--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,8 +14,8 @@
   </div>
   <div class="card-grid">
     <% @lists.each do |list| %>
-      <%= link_to list_path(list), :action => 'go' do %>
-        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      <%= link_to list_path(list), :action => 'go', class: "list" do %>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>');">
           <h1><%= list.name %></h1>
         </div>
       <% end %>
