--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://picsum.photos/seed/picsum/500/300);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>');">
   <div class="container">
     <h1><%= @list.name %></h1>
     <div class="counter"><%= @list.movies.count %> movie<%= @list.movies.count != 1 ? "s" : "" %></div>
@@ -10,6 +10,7 @@
   <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModal">
     Add a movie
   </button>
+  <%= link_to "Delete list", list_path(@list), method: :delete, class: "btn btn-danger" %>
   <div class="bookmarks">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="card-trip">
